--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,6 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+VITE_PUSHER_BEAMS_INSTANCE_ID=""
+VITE_PUSHER_BEAMS_SECRET_KEY=""
